--- a/index.html
+++ b/index.html
@@ -25,6 +25,25 @@
       <a class="nav-link ">Contact</a>
     </li>
   </ul>
+  <div id="profile" class="container-fluid  mt-5"> 
+    <!--<div class="card mb-3" style="max-width: 540px;">-->
+      <div class="row g-0">
+        <div class="col-md-4">
+          <img src="images/myphoto.png" class="img-fluid rounded-start" alt="...">
+        </div>
+        <div class="col-md-8">
+          <!--<div class="card-body">
+            <h5 class="card-title">Card title</h5> -->
+            <p class="card-text">I am Nuru Hussein. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci maxime, debitis fuga distinctio quas dolores, recusandae molestias aspernatur natus officiis amet ipsa, asperiores provident. At, ad laudantium! Optio, omnis ipsum?
+            Amet maiores illo explicabo voluptatibus laborum ab fuga, animi beatae quas laudantium. Quia quae ducimus, nihil veniam harum sunt laboriosam officiis. Quasi perspiciatis, vitae impedit dolor excepturi sint hic minima?
+            Ullam exercitationem aut dolore harum autem explicabo, perspiciatis minus sequi! Repellendus, atque eos ratione dolorem natus corrupti. Porro unde adipisci quidem vitae qui! Quo, dicta accusamus? Deleniti asperiores ea itaque.</p>
+            <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore hic omnis optio error doloribus, assumenda odit eligendi. Et expedita quibusdam quasi libero ad autem animi similique perspiciatis? Perferendis, modi tempore! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci maxime, debitis fuga distinctio quas dolores, recusandae molestias aspernatur natus officiis amet ipsa, asperiores provident. At, ad laudantium! Optio, omnis ipsum?</p>
+            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
