--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <a class="nav-link active" aria-current="page" href="#profile">Profile</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Education</a>
+      <a class="nav-link" href="#education">Education</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Skills</a>
@@ -41,6 +41,15 @@
             <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
           </div>
         </div>
+      </div>
+    </div>
+  </div>
+  <div id="education" class="container mt-5"> 
+    <div class="card">
+      <div class="card-body">
+        <h5 class="card-title">Education</h5>
+        <p class="card-text">I am Certified full stack java developer. I have attended Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure velit similique ex, aliquid culpa rerum distinctio aut, nam cum alias fuga labore veniam, accusamus repudiandae vero ipsa! Nisi, maiores quia.</p>
+        <a href="#" class="btn btn-warning border-primary">Read More</a>
       </div>
     </div>
   </div>
