--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <a class="nav-link" href="#education">Education</a>
     </li>
     <li class="nav-item">
-      <a class="nav-link" href="#">Skills</a>
+      <a class="nav-link" href="#skill">Skills</a>
     </li>
     <li class="nav-item">
       <a class="nav-link ">Resume</a>
@@ -53,6 +53,51 @@
       </div>
     </div>
   </div>
+   <div class="container-fluid" style="height: 200px;">
+    <div class="row">
+      <div class="col">
+        <div id="education" class="container mt-5"> 
+          <div class="card">
+            <div class="card-body">
+              <h5 id="skill" class="card-title">Skills</h5>
+            </div>
+            <div class="row">
+              <div class="col">
+                <div class="card mb-3" style="max-width: 540px; height: 200px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="images/frontend.jpeg" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Front-end</h5>
+                        <p class="card-text">I am well versed in Front-end tools like ... <a href="#profile" class="btn btn-warning"> Read More</a></p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="col">
+                <div class="card mb-3" style="max-width: 540px; height: 200px;">
+                  <div class="row g-0">
+                    <div class="col-md-4">
+                      <img src="images/backend.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                      <div class="card-body">
+                        <h5 class="card-title">Back-end</h5>
+                        <p class="card-text"> I have skills in Back-end tools such as .. <a href="#"> Read More >></a> </p>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+   </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
