--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <ul class="nav justify-content-end p-5 bg-black">
@@ -53,7 +54,7 @@
       </div>
     </div>
   </div>
-   <div class="container-fluid" style="height: 200px;">
+   <div class="container-fluid">
     <div class="row">
       <div class="col">
         <div id="education" class="container mt-5"> 
@@ -63,7 +64,7 @@
             </div>
             <div class="row">
               <div class="col">
-                <div class="card mb-3" style="max-width: 540px; height: 200px;">
+                <div class="card mb-3" style="max-width: 540px; height: 150px;">
                   <div class="row g-0">
                     <div class="col-md-4">
                       <img src="images/frontend.jpeg" class="img-fluid rounded-start" alt="...">
@@ -97,6 +98,18 @@
         </div>
       </div>
     </div>
+   </div>
+   <div class="container">
+     <div class="row">
+       <div class="col">
+        <div class="card">
+          <div class="card-body">
+            <h5 id="resume" class="card-title">Resume</h5>
+            <p class="card-text">I have detailed resume prepared so that you can review and dowload form the link below. <br>  <a href="#" class="btn btn-success border-primary">Read More</a></p>
+          </div>
+        </div>
+       </div>
+     </div>
    </div>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
