--- a/index.html
+++ b/index.html
@@ -6,27 +6,102 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Portfolio</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js" integrity="sha384-OgVRvuATP1z7JjHLkuOU7Xw704+h835Lr+6QL9UvYjZE3Ipu6Tp75j7Bh/kR0JKI" crossorigin="anonymous"></script>
 </head>
 <body>
-  <ul class="nav justify-content-end p-5 bg-black">
-    <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#profile">Profile</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#education">Education</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="#skill">Skills</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link ">Resume</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link ">Contact</a>
-    </li>
-  </ul>
-  <div id="profile" class="container-fluid  mt-5"> 
+    <!--navigation bar-->
+    <nav class="navbar navbar-expand-md navbar-light pl-5 fixed-top responsive" style="background-color: #42def8">
+      <div class="container">
+        <a class="navbar-brand " href="#"><img src="images/logo-modified.png" alt="logo" width="35" height="25"></a>
+        <span class="navbar-text">No one belongs here than you!</span>
+        <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">
+  <span class="navbar-toggler-icon"></span>
+  </button>
+        <div class="collapse navbar-collapse" id="myMenu">
+          <ul class="nav-list navbar-nav pl-5 mb-3">
+              <li class="nav-item">
+                  <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a> </li>
+            <li class="nav-item">
+                  <a class="nav-link" href="mailto:husseinnour469@gmail.com"><i class="fab fa-instagram"></i><img src="images/gmail.jpeg" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+            <li class="nav-item"><a class="nav-link" href="#Registration"><i class="fab fa-instagram"></i><img src="images/Facebook_Logo.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+            <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i><img src="images/twitter.png" alt="Twitter_Logo" width="25px" height="15px"></a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="fab fa-linkedIn"></i><img src="images/linkedIn.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+            <li class="nav-item">
+              <a class="nav-link" aria-current="page" href="#profile">Profile</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#education">Education</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#skill">Skills</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#resume">Resume</a>
+            </li>
+            <li class="nav-item">
+              <div class="dropdown">
+                <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                  Contact
+                </button>
+                <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                  <li><a class="dropdown-item" href="content/message.html">Message me!</a></li>
+                  <li><a class="dropdown-item" href="#"> connect on social media</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
+      </div>
+      </div>
+  
+    </nav>
+    <!--
+  <nav class="navbar navbar-expand-sm navbar-light" style="background-color: #42def8;"> 
+    <a class="navbar-brand" href="#"><img src="images/logo-modified.png" alt="logo" width="35" height="25"></a>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapse" data-target="#myMenu">
+        <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="myMenu">
+      <ul class=" nav-list navbar-nav  mx-auto">
+        <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a></li>
+        <li class="nav-item">
+          <a class="nav-link" arial-current="page" href="mailto:husseinnour469@gmail.com"><i class="fab fa-instagram"></i><img src="images/gmail.jpeg" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+        <li class="nav-item">
+          <a class="nav-link" arial-current="page" href="#"><i class="fab fa-instagram"></i><img src="images/Facebook_Logo.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+        <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i><img src="images/twitter.png" alt="Twitter_Logo" width="25px" height="15px"></a></li>
+        <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="fab fa-linkedIn"></i><img src="images/linkedIn.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+        <li class="nav-item">
+          <a class="nav-link" aria-current="page" href="#profile">Profile</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#education">Education</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#skill">Skills</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="#resume">Resume</a>
+        </li>
+        <li class="nav-item">
+          <div class="dropdown">
+            <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+              Contact
+            </button>
+            <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+              <li><a class="dropdown-item" href="content/message.html">Message me!</a></li>
+              <li><a class="dropdown-item" href="#"> connect on social media</a></li>
+              <li><a class="dropdown-item" href="#">Something else here</a></li>
+            </ul>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </nav> -->
+  <div id="profile" class="container-fluid" style="margin-top: 15%;"> 
     <!--<div class="card mb-3" style="max-width: 540px;">-->
       <div class="row g-0">
         <div class="col-md-4">
@@ -99,7 +174,7 @@
       </div>
     </div>
    </div>
-   <div class="container">
+   <div class="container mb-5">
      <div class="row">
        <div class="col">
         <div class="card">
@@ -111,6 +186,17 @@
        </div>
      </div>
    </div>
+  <!-- Footer -->
+<footer class="page-footer font-small bg-black text-white fixed-bottom">
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© 2022 Copyright:
+    <a href="/" class="text-decoration-none"> Nuru Hussein</a>
+  </div>
+  <!-- Copyright -->
+
+</footer>
+<!-- Footer -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
