--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
       </ul>
     </div>
   </nav> -->
-  <div id="profile" class="container-fluid" style="margin-top: 15%;"> 
+  <div id="profile" class="container-fluid navbar-expand-sm" style="margin-top: 15%;"> 
     <!--<div class="card mb-3" style="max-width: 540px;">-->
       <div class="row g-0">
         <div class="col-md-4">
@@ -186,6 +186,7 @@
        </div>
      </div>
    </div>
+   <button type="button" onclick="clicked();"> </button>
   <!-- Footer -->
 <footer class="page-footer font-small bg-black text-white fixed-bottom">
 
@@ -197,6 +198,7 @@
 
 </footer>
 <!-- Footer -->
+    <script src="js/form-validation-js"></script>
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
   </body>
 </html>
