js for message html

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <nav class="navbar navbar-expand-md navbar-light pl-5 fixed-top responsive" style="background-color: #42def8">
       <div class="container">
         <a class="navbar-brand " href="#"><img src="images/logo-modified.png" alt="logo" width="35" height="25"></a>
-        <span class="navbar-text">No one belongs here than you!</span>
+        <span class="navbar-text"> Welcome to the designated area for excellency!</span>
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#myMenu">
   <span class="navbar-toggler-icon"></span>
   </button>
@@ -26,7 +26,7 @@
                   <a class="nav-link" href="#"><i class="fab fa-facebook-f"></i></a> </li>
             <li class="nav-item">
                   <a class="nav-link" href="mailto:husseinnour469@gmail.com"><i class="fab fa-instagram"></i><img src="images/gmail.jpeg" alt="Facebook_Logo" width="25px" height="15px"></a></li>
-            <li class="nav-item"><a class="nav-link" href="#Registration"><i class="fab fa-instagram"></i><img src="images/Facebook_Logo.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
+            <li class="nav-item"><a class="nav-link" href="https://www.facebook.com/profile.php?id=100079614612943"><i class="fab fa-instagram"></i><img src="images/Facebook_Logo.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
             <li class="nav-item"><a class="nav-link" href="#"><i class="fab fa-twitter"></i><img src="images/twitter.png" alt="Twitter_Logo" width="25px" height="15px"></a></li>
             <li class="nav-item"><a class="nav-link" href="https://www.linkedin.com/public-profile/settings?trk=d_flagship3_profile_self_view_public_profile"><i class="fab fa-linkedIn"></i><img src="images/linkedIn.png" alt="Facebook_Logo" width="25px" height="15px"></a></li>
             <li class="nav-item">
@@ -101,7 +101,7 @@
       </ul>
     </div>
   </nav> -->
-  <div id="profile" class="container-fluid navbar-expand-sm" style="margin-top: 15%;"> 
+  <div id="profile" class="container-fluid navbar-expand" style="margin-top: 15%;"> 
     <!--<div class="card mb-3" style="max-width: 540px;">-->
       <div class="row g-0">
         <div class="col-md-4">
@@ -110,7 +110,7 @@
         <div class="col-md-8">
           <!--<div class="card-body">
             <h5 class="card-title">Card title</h5> -->
-            <p class="card-text">I am Nuru Hussein. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci maxime, debitis fuga distinctio quas dolores, recusandae molestias aspernatur natus officiis amet ipsa, asperiores provident. At, ad laudantium! Optio, omnis ipsum?
+            <p class="card-text mt-5">I am Nuru Hussein. Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci maxime, debitis fuga distinctio quas dolores, recusandae molestias aspernatur natus officiis amet ipsa, asperiores provident. At, ad laudantium! Optio, omnis ipsum?
             Amet maiores illo explicabo voluptatibus laborum ab fuga, animi beatae quas laudantium. Quia quae ducimus, nihil veniam harum sunt laboriosam officiis. Quasi perspiciatis, vitae impedit dolor excepturi sint hic minima?
             Ullam exercitationem aut dolore harum autem explicabo, perspiciatis minus sequi! Repellendus, atque eos ratione dolorem natus corrupti. Porro unde adipisci quidem vitae qui! Quo, dicta accusamus? Deleniti asperiores ea itaque.</p>
             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore hic omnis optio error doloribus, assumenda odit eligendi. Et expedita quibusdam quasi libero ad autem animi similique perspiciatis? Perferendis, modi tempore! Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci maxime, debitis fuga distinctio quas dolores, recusandae molestias aspernatur natus officiis amet ipsa, asperiores provident. At, ad laudantium! Optio, omnis ipsum?</p>
@@ -186,7 +186,7 @@
        </div>
      </div>
    </div>
-   <button type="button" onclick="clicked();"> </button>
+   <button type="button" onclick="visited();"> </button>
   <!-- Footer -->
 <footer class="page-footer font-small bg-black text-white fixed-bottom">
 
