--- a/content/message.html
+++ b/content/message.html
@@ -7,7 +7,7 @@
     <title> Form to keep in touch and file </title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/message.css">
-    <script src="../js/form-validation-js"></script>
+    <script src="../content/message.js"></script>
 </head>
 <body onload="document.validation.firstName.focus();">
     </div>
@@ -15,7 +15,7 @@
         <h4 class="help"> If you have questions or would just like to make connection with me or give me some feedback, please don’t hesitate to reach out.</h4>
         <p class="availability"> I can be reached Monday to Friday from 7:00AM to  8:30PM (EST) via email, phone and chat. My Toll-free phone number is <a href="tel:1-674-553-4534"> Nour-911 </a> </p>
     <div class="form">
-    <form name='validation' onSubmit="return formValidation();">
+    <form action="" name='validation' onSubmit="return clicked();">
         <label class="required" for="firstName"> First Name: </label> <br>
         <input type="text" name="firstName" id="firstName" placeholder="First Name"  class="space" required> <br> <br>
 
