get in touch html

--- a/index.html
+++ b/index.html
@@ -44,11 +44,11 @@
             <li class="nav-item">
               <div class="dropdown">
                 <button class="btn btn-primary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
-                  Contact
+                  Get in touch
                 </button>
                 <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
                   <li><a class="dropdown-item" href="content/message.html">Message me!</a></li>
-                  <li><a class="dropdown-item" href="#"> connect on social media</a></li>
+                  <li><a class="dropdown-item" href="#"> Online chat </a></li>
                   <li><a class="dropdown-item" href="#">Something else here</a></li>
                 </ul>
               </div>
